# RAOC

./: AI_rules.md  Architecture.md  CLAUDE.md  PRD.md  Plan.md  README.md  pyproject.toml  zone_config.yaml
docs/superpowers/plans/: 2026-03-25-phase-1-policy-agent.md
docs/superpowers/specs/: 2026-03-25-policy-agent-zone-model-design.md
raoc/: config.py  coordinator.py  main.py
raoc/agents/: discovery.py  execution.py  intake.py  planning.py  policy_agent.py  query_agent.py  reporter.py  verification.py
raoc/db/: queries.py  schema.py
raoc/gateway/: telegram_bot.py
raoc/models/: action.py  job.py  policy.py  scope.py  task.py
raoc/substrate/: command_wrapper.py  exceptions.py  host_sampler.py  llm_client.py  screenshot.py  secret_broker.py  status_narrator.py  zone_resolver.py
tests/: conftest.py  test_command_wrapper.py  test_coordinator.py  test_db.py  test_discovery.py  test_end_to_end.py  test_execution.py  test_gateway.py  test_intake.py  test_llm_client.py  test_models.py  test_narrator.py  test_planning.py  test_policy_agent.py  test_query_agent.py  test_reporter.py  test_sampler.py  test_screenshot.py  test_secrets.py  test_verification.py  test_zone_resolver.py
